--- a/malmal.html
+++ b/malmal.html
@@ -41,28 +41,22 @@
     </div>
 </nav>
 <!--end of Navigation bar-->
-<script>
-    $(document).ready(function() {
-        $('#myModal').modal('show');
-    });
-</script>
 
 <div class="container">
- <!-- Modal -->
-    <div class="modal fade" id="myModal" role="dialog" style="margin-top: 300px">
+    <!-- Modal -->
+    <div class="modal fade" id="usernameModal" role="dialog" data-keyboard="false" tabindex="-1" data-backdrop="static"
+         style="margin-top: 300px">
         <div class="modal-dialog">
-
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header" style="border-width: 0">
-                    <h4 class="modal-title">Gib deinen Usernamen ein!</h4>
+                    <h4 class="modal-title">Bitte gib deinen Usernamen ein.</h4>
                 </div>
                 <div class="modal-body" style="border-width: 0">
-                    <input id="wordInput" type="text" class="form-control" placeholder="Dein Username">
+                    <input id="usernameInput" type="text" class="form-control" placeholder="Dein Username">
                 </div>
                 <div class="modal-footer" style="border-width: 0">
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Absenden</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Abbrechen</button>
                 </div>
             </div>
 
@@ -72,33 +66,33 @@
 <!--site content start-->
 <div class="container-fluid site-content" id="malmal-content">
     <div class="row">
-        <div class="col-md-8">
-            <canvas id="drawCanvas" class="whiteboard" style="height: 70vh">
+        <div class="col-md-8" id="canvasParent">
+            <canvas id="drawCanvas" class="whiteboard">
                 Sorry, your browser doesn't support the &lt;canvas&gt; element.
             </canvas>
         </div> <!-- /col-md-4 -->
         <div class="col-md-4 form-text">
-            <form>
-                <div class="row" style="height: 70vh">
-                    <div class="col" style="margin-bottom: 5px; margin-top: -4px">
-                        <textarea id="chatBox" readonly></textarea>
-                    </div>
+            <div class="row" style="height: 70vh">
+                <div class="col" style="margin-bottom: 5px; margin-top: -4px">
+                    <ul class="scrollbar scrollbar-primary" id="messages"></ul>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <input type="text" class="form-control" placeholder="Deine Nachricht" id="messageBox">
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="text" class="form-control" placeholder="Deine Nachricht" id="inputMessage">
                 </div>
-            </form>
+            </div>
         </div> <!-- /col-md-4 -->
     </div> <!-- /row -->
     <div class="row">
-        <div class="colors">
-            <div class="color black"></div>
-            <div class="color red"></div>
-            <div class="color green"></div>
-            <div class="color blue"></div>
-            <div class="color yellow"></div>
+        <div class="col-md-12">
+            <div class="colors">
+                <div class="color black"></div>
+                <div class="color red"></div>
+                <div class="color green"></div>
+                <div class="color blue"></div>
+                <div class="color yellow"></div>
+            </div>
         </div>
     </div>
 </div>
@@ -109,5 +103,11 @@
         <span class="text-muted">Hier würdest du das Impressum und sowas finden wenn wir sowas bräuchten...</span>
     </div>
 </footer>
+
+<script>
+    $(document).ready(function () {
+        $('#usernameModal').modal('show');
+    });
+</script>
 </body>
 </html>
